2010-09-30  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/graphite.exp: Add compile rules for vect-* files.
	* gfortran.dg/graphite/graphite.exp: Same.
	* gcc.dg/graphite/vect-pr43423.c: New.

2010-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/45843
	* g++.dg/torture/pr45843.C: New test.

2010-09-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45828
	* gfortran.dg/allocate_derived_5.f90: New.

2010-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/31261
	* gcc.dg/tree-ssa/pr31261.c: New test.

2010-09-30  Michael Eager  <eager@eagercon.com>

	* gcc.c-torture/execute/cmpsi-2.c: New testcase.
	* gcc.c-torture/execute/cmpsf-1.c: Ditto.
	* gcc.target/microblaze/microblaze.exp: Ditto.
	* gcc.target/microblaze/others/string_cst1.c: Ditto.
	* gcc.target/microblaze/others/string_cst2.c: Ditto.
	* gcc.target/microblaze/others/data_var1.c: Ditto.
	* gcc.target/microblaze/others/data_var2.c: Ditto.
	* gcc.target/microblaze/others/data_var3.c: Ditto.
	* gcc.target/microblaze/others/string_cst1_gpopt.c:: Ditto.
	* gcc.target/microblaze/others/strings1.c:: Ditto.
	* gcc.target/microblaze/others/string_cst2_gpopt.c: Ditto.
	* gcc.target/microblaze/others/interrupt_handler_leaf.c: Ditto.
	* gcc.target/microblaze/others/sdata_var1.c: Ditto.
	* gcc.target/microblaze/others/sdata_var2.c: Ditto.
	* gcc.target/microblaze/others/sdata_var3.c: Ditto.
	* gcc.target/microblaze/others/sdata_var4.c: Ditto.
	* gcc.target/microblaze/others/sdata_var5.c: Ditto.
	* gcc.target/microblaze/others/sdata_var6.c: Ditto.
	* gcc.target/microblaze/isa/fsqrt.c: Ditto.
	* gcc.target/microblaze/isa/pcmp.c: Ditto.
	* gcc.target/microblaze/isa/nofloat.c: Ditto.
	* gcc.target/microblaze/isa/fcvt.c: Ditto.
	* gcc.target/microblaze/isa/float.c: Ditto.
	* gcc.target/microblaze/isa/mulh.c: Ditto.
	* gcc.target/microblaze/isa/fcmp1.c: Ditto.
	* gcc.target/microblaze/isa/mul-bshift-pcmp.c: Ditto.
	* gcc.target/microblaze/isa/fcmp2.c: Ditto.